# dota_analyst

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
analysis/: analysis.ipynb
data/: eda.ipynb  fetch_player_games.py  fetch_player_ids.py  match_data_query.py  parse_data.py  parsed_data.csv  pull_data.py  stratz_client.py  update_data.py  update_missing_data.py
data/queries/: live_match_query.py  match_stats_query.py  player_match_ids_query.py  player_matches_query.py
proposal/: proposal.tex
